crates/buff-lang-lexer/tests/snapshots/lexer_tests__snapshot_arithmetic_buff.snap
---
source: crates/buff-lang-lexer/tests/lexer_tests.rs
expression: "lines.join(\"\\n\")"
---
func
ident(main)
(
)
:
newline
indent
let
ident(x)
=
int(2)
+
int(3)
*
int(4)
newline
let
ident(y)
=
(
int(2)
+
int(3)
)
*
int(4)
newline
let
ident(z)
=
ident(x)
-
ident(y)
newline
ident(print)
(
ident(z)
)
newline
dedent
eof
