crates/buff-lang-lexer/tests/snapshots/lexer_tests__snapshot_ola_buff.snap
---
source: crates/buff-lang-lexer/tests/lexer_tests.rs
expression: "lines.join(\"\\n\")"
---
func
ident(main)
(
)
:
newline
indent
ident(print)
(
string_start
string_part("Olá, Buff!")
string_end
)
newline
dedent
eof
